# HomeworkM27

./: CMakeLists.txt  README.md
clientM27/: CMakeLists.txt
clientM27/src/: clientTest.cpp  clientTest.h  main.cpp  myChat.cpp  myChat.h
src/: Logger.cpp  Logger.h  main.cpp  mySQLTest.cpp  mySQLTest.h  serverTest.cpp  serverTest.h
